--- a/tetris/tetris.csproj
+++ b/tetris/tetris.csproj
@@ -40,10 +40,12 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Board.cs" />
         <Compile Include="Game.cs" />
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <Compile Include="ScheduleTimer.cs" />
+        <Compile Include="Tetrominoe.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
