--- a/tetris/tetris.csproj
+++ b/tetris/tetris.csproj
@@ -41,6 +41,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Board.cs" />
+        <Compile Include="Data.cs" />
         <Compile Include="Game.cs" />
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
